--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,9 @@
     <string name="default_break_minutes">5</string>
     <string name="settings">Settings</string>
     <string name="sessions_label">Sessions: %1$d</string>
+    <string name="back">Back</string>
+    <string name="confirm_exit_title">Confirm exit</string>
+    <string name="confirm_exit_message">Are you sure you want to exit? This will reset sessions to 1.</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
